--- a/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages_de.properties
+++ b/trunk/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages_de.properties
@@ -27,6 +27,7 @@ org.kalypso.kalypso1d2d.pjt.actions.ImportElevationHandler.4=Digitales Höhenmode
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.0=Modelldatendatei (terrain.gml) mit Profilen konnte nicht geladen werden
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.1=Profile importieren
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.3=Kartenansicht ist nicht ge\u00F6ffnet. Es k\u00F6nnen keine Themen hinzugef\u00FCgt werden.
+org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.4=Querprofile
 #Import WSPM model
 org.kalypso.kalypso1d2d.pjt.actions.ImportWSPMHandler.0=WSPM-Profile importieren
 org.kalypso.kalypso1d2d.pjt.actions.ImportWSPMHandler.1=WSPM-Profile importieren
