--- a/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages.properties
+++ b/trunk/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/i18n/messages.properties
@@ -90,6 +90,10 @@ org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CalculationUnitProp
 org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CalculationUnitPropertyWizardPage.3=Number of Interpolation Profiles
 org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CalculationUnitPropertyWizardPage.5=Available Base Calculation Units
 org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CalculationUnitPropertyWizardPage.8=Assigned Base Calculation Units
+
+#Wizard for Cloning new Calculation units
+org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CloneCalculationUnitWizard.0=Clone Calculation Unit
+org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CloneCalculationUnitWizard.1=Please enter the name for cloned calculation unit 
 #Wizard for Creating new Calculation units
 org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CreateCalculationUnitWizard.0=Create Calculation Unit
 org.kalypso.kalypsomodel1d2d.ui.map.calculation_unit.wizards.CreateCalculationUnitWizard.1=Create Calculation Unit
@@ -710,6 +714,7 @@ org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.5=E
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.14=Do you really want to delete the calculation unit?
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.15=Delete Calculation Unit
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.Tooltip.BTN_ADD=Add Calculation Unit
+org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.Tooltip.BTN_CLONE=Clone Calculation Unit
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.Tooltip.BTN_CLICK_TO_CALCULATE=Start Calculation
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.Tooltip.BTN_EDIT=Edit Properties
 org.kalypso.kalypsomodel1d2d.ui.calculationUnitView.CalculationUnitMetaTable.Tooltip.BTN_REMOVE=Delete Calculation Unit
