--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -1,4 +1,6 @@
 #Fri Feb 10 15:31:21 CET 2012
+org.kalypso.model.wspm.tuhh.ui.resolutions.AddRoughnessResolution.0=Rauheiten hinzufügen
+org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.1=Name der Rechenvariante ungültig: '%s'. Der Name darf nicht auf '.' enden.
 SobekProfileExportFileChooserPage_9=ID-Muster
 org.kalypso.model.wspm.tuhh.ui.wizard.CreateProfileFromDem.8=Kilometrierung
 org.kalypso.model.wspm.tuhh.ui.wizard.CreateProfileFromDem.7=Nicht zul\u00E4ssige Kilometrierung
