--- a/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -26,6 +26,8 @@ rrmParam_Parameter_rrmParam_soilLayerMember_label=besteht aus Bodenhorizontliste
 rrmParam_Parameter_rrmParam_soilLayerMember_tooltip=besteht aus Bodenhorizontliste
 rrmParam_Parameter_rrmParam_soiltypeMember_label=besteht aus Bodentypenliste
 rrmParam_Parameter_rrmParam_soiltypeMember_tooltip=besteht aus Bodentypenliste
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=besteht aus DRWBM-Maßnahme
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=besteht aus DRWBM-Maßnahme
 rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelungsgrad, welcher die Aufteilung der Hydrotopfl\u00E4che in den nat\u00FCrlichen und den versiegelten (der Regenwasserkanalisation zuflie\u00DFenden) Anteil bestimmt.
 rrmParam_Sealing_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Sealing_rrmParam_m_vers_label=Versiegelungsgrad
@@ -68,3 +70,15 @@ rrmParam_Soiltype_description=Der Bodentyp gibt Aufschluss \u00FCber die Schicht
 rrmParam_Soiltype_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Soiltype_rrmParam_soilLayerParameterMember_label=Bodenhorizonte
 rrmParam_Soiltype_rrmParam_soilLayerParameterMember_tooltip=Bodenhorizonte
+rrmParam_DRWBMSoiltype_rrmParam_soilLayerParameterMember_label=DRWBM-Bodenhorizonte
+rrmParam_DRWBMSoiltype_rrmParam_soilLayerParameterMember_label=DRWBM-Bodenhorizonte
+rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_label=Rohrdurchmesser[mm]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_diameterPipe_tooltip=Rohrdurchmesser in mm
+rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_label=Rohr Rauheit
+rrmParam_DRWBMSoilLayerParameter_rrmParam_roughnessPipe_tooltip=Rohr Rauheit
+rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_label=Überlauf Höhe [mm]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_overflowHeight_tooltip=Höhe des Überlaufs in mm
+rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=[TODO]Area per Outlet [??]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=[TODO]Area per Outlet [??]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=[TODO]Width of area [??]
+rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=[TODO]Width of area [??]
