--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -26,8 +26,10 @@ rrmParam_Parameter_rrmParam_soilLayerMember_label=besteht aus Bodenhorizontliste
 rrmParam_Parameter_rrmParam_soilLayerMember_tooltip=besteht aus Bodenhorizontliste
 rrmParam_Parameter_rrmParam_soiltypeMember_label=besteht aus Bodentypenliste
 rrmParam_Parameter_rrmParam_soiltypeMember_tooltip=besteht aus Bodentypenliste
-rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=besteht aus DRWBM-Maﬂnahme
-rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=besteht aus DRWBM-Maﬂnahme
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_label=besteht aus DRWBM Bodentypenliste
+rrmParam_Parameter_rrmParam_drwbmSoiltypeMember_tooltip=besteht aus DRWBM Bodentypenliste
+rrmParam_Parameter_rrmParam_drwbmDefinitionMember_label=besteht aus DRWBM Definitionen
+rrmParam_Parameter_rrmParam_drwbmDefinitionMember_tooltip=besteht aus DRWBM Definitionen
 rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelungsgrad, welcher die Aufteilung der Hydrotopfl\u00E4che in den nat\u00FCrlichen und den versiegelten (der Regenwasserkanalisation zuflie\u00DFenden) Anteil bestimmt.
 rrmParam_Sealing_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Sealing_rrmParam_m_vers_label=Versiegelungsgrad
@@ -82,3 +84,7 @@ rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_label=[TODO]Area per Out
 rrmParam_DRWBMSoilLayerParameter_rrmParam_areaPerOutlet_tooltip=[TODO]Area per Outlet [??]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_label=[TODO]Width of area [??]
 rrmParam_DRWBMSoilLayerParameter_rrmParam_widthOfArea_tooltip=[TODO]Width of area [??]
+rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_label=DRWBM Bodentyp
+rrmParam_DRWBMDefinition_rrmParam_soilLayerLink_tooltip=Verweis auf DRWBM Bodentyp
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_label=DRWBM Landnutzungsgruppe
+rrmParam_DRWBMDefinition_rrmParam_landuseclassLink_tooltip=Verweis auf DRWBM Landnutzungsgruppe
