--- a/trunk/KalypsoUIRRM/plugin_de.properties
+++ b/trunk/KalypsoUIRRM/plugin_de.properties
@@ -5,6 +5,7 @@ command.name.0 = Landnutzung
 command.name.1 = Pedologie
 command.name.2 = Geologie
 command.name.3 = Hydrotope erzeugen
+command.name.4 = Overlay-Flächen
 
 org.kalypso.model.rrm.timeseriesManagement.name=Zeitreihen
 org.kalypso.model.rrm.timeseriesManagement.description=Zeitreihen
@@ -17,6 +18,8 @@ org.kalypso.model.rrm.soilDefinition.name=Boden
 org.kalypso.model.rrm.soilDefinition.description=
 org.kalypso.model.rrm.landuseDefinition.name=Landnutzung
 org.kalypso.model.rrm.landuseDefinition.description=
+org.kalypso.model.rrm.drwbmDefinition.name=DRWBM Definition
+org.kalypso.model.rrm.drwbmDefinition.description=
 
 org.kalypso.model.rrm.modelConstruction.name=Modellaufbau
 org.kalypso.model.rrm.modelConstruction.description==Aufgaben zur grundsätzlichen Bearbeitung des Modellaufbaus
