--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -77,6 +77,8 @@ ShapeWithHash.0=Failed to load shape '%s'
 NaModelInnerCalcJob.0=Simulation cancelled by user
 org.kalypso.convert.namodel.NaModelInnerCalcJob.149=Knoten - Nr.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.140=Der Dateiname wurde daher um die ObjektID erweitert\: %s.
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
+org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.4=SoilType '%s' was removed by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.3=SoilType '%s' was reduced by imported soilType '%s'
 org.kalypso.convert.namodel.schema.binding.SoilTypeCollection.2=Ingoring imported soilType '%s' due to intersection
@@ -93,13 +95,13 @@ org.kalypso.convert.namodel.manager.ChannelManager.2=Es existiert keine (g\u00FC
 org.kalypso.convert.namodel.NaModelInnerCalcJob.132=zu diesem Knoten existiert ein Pegel, einige Pegelmetadaten (z.B. Wechmann-Funktion) werden in Ergebniszeitreihe uebernommen\r\n
 org.kalypso.convert.namodel.manager.ChannelManager.1=ChannelType %s is not supported
 org.kalypso.convert.namodel.manager.ChannelManager.0=\ km(%d)\: %s
-org.kalypso.convert.namodel.manager.HydrotopManager.3=Severe error in area calculation. The sum of hydrotop areas (%.2f m2) does not match the catchment area (ID\: %s, area\: %.2f m2). Difference\: %.2f m2 (%.2f%%). 
+org.kalypso.convert.namodel.manager.HydrotopManager.3=Severe error in area calculation. The sum of hydrotop areas (%.2f m2) does not match the catchment area (ID\: %s, area\: %.2f m2). Difference\: %.2f m2 (%.2f%%).
 org.kalypso.convert.namodel.manager.HydrotopManager.2=Hydrotops from GML
 LzsimWriter.7=Failed to write initial condition for channel %s
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 org.kalypso.convert.namodel.manager.HydrotopManager.0=The landuse type '%s' already exists. Please check the landuse types.
-LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.  
-LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.  
+LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
+LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.
 org.kalypso.convert.namodel.manager.LzsimManager.27=Es wurden keine Anfangswerte f\u00FCr Teilgebiet %s berechnet. Falls gew\u00FCnscht, aktivieren Sie bitte den Unterwasserknoten dieses Teilgebiets.
 LzsimWriter.3=Failed to write initial condition for channel %s
 LzsimWriter.2=Failed to write Kalypso-NA ASCII start condition\: %s
@@ -117,7 +119,7 @@ KalypsoNaProcessor.0=No Kalypso-NA.exe version configured.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.125=lese berechnetes Ergebnis fuer \#%s, Name\: %s(%s)%n
 org.kalypso.convert.namodel.schema.functions.GetGeomDestinationFeatureVisitor.0=Warning\: Feature is null. That must not be\!
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.2=Intersecting %d of %d polygons
-org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese ergebnissdatei 
+org.kalypso.convert.namodel.NaModelInnerCalcJob.123=lese ergebnissdatei
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.1=Initializing spatial indices
 NaFortranLogTranslater.4=Failed to write translated KalypsoNA log file %s
 org.kalypso.convert.namodel.FeatureListGeometryIntersector.0=Geometry Intersection
@@ -144,7 +146,7 @@ org.kalypso.convert.namodel.NAModellConverter.25=not found in shapeFile\: id\=
 SudsFileWriter_0=Geometry error at hydrotope '%s'
 NetFileManager_0=Inconsistent net\: Node '%s' with branch has no upstream channel.
 org.kalypso.convert.namodel.NAModellConverter.24=copyvalue is null\: id\=
-org.kalypso.convert.namodel.hydrotope.TopologyChecker.0=Topology problem at feature %s\: 
+org.kalypso.convert.namodel.hydrotope.TopologyChecker.0=Topology problem at feature %s\:
 org.kalypso.convert.namodel.NAModellConverter.19=inserting geometries\: nodes
 org.kalypso.convert.namodel.NAModellConverter.14=inserting geometries\: channels
 org.kalypso.convert.namodel.job.NaModelParameterAnalyseSimulation.7=Fehler bei Berechnung
@@ -166,14 +168,14 @@ org.kalypso.convert.namodel.manager.ParseManager.9=keine Datei snowtyp.dat vorha
 NaModelCalcJob.1=Error during optimization. Optimization results not present.
 org.kalypso.convert.namodel.manager.BodenartManager.5=Bodenparameter NA-Modell
 NaModelCalcJob.0=Loading simulation data...
-org.kalypso.convert.namodel.manager.BodenartManager.4=\ bodenartManager does not support int-ID mapping. (not necessary) 
+org.kalypso.convert.namodel.manager.BodenartManager.4=\ bodenartManager does not support int-ID mapping. (not necessary)
 org.kalypso.convert.namodel.manager.ParseManager.5=---------Es wurden %d Nutzungsdateien eingelesen
-ImportOperation.1=Import successfully terminated 
+ImportOperation.1=Import successfully terminated
 org.kalypso.convert.namodel.manager.ParseManager.4=Nutzungsdatei\: %s
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.4=StrangID\: %s
 ImportOperation.0=The operation reported some messages during import\:
 org.kalypso.convert.namodel.manager.ParseManager.3=Nutzungsdatei\: %s
-org.kalypso.convert.namodel.manager.BodenartManager.0=\ bodenartManager does not support int-ID mapping. (not necessary) 
+org.kalypso.convert.namodel.manager.BodenartManager.0=\ bodenartManager does not support int-ID mapping. (not necessary)
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.2=circle for \: %s
 org.kalypso.convert.namodel.manager.ParseManager.1=keine Datei boden_art.dat vorhanden
 org.kalypso.convert.namodel.net.visitors.SimulationVisitor.1=Netzplan ist fehlerhaft - Wasser flie\u00DFt im Kreis\r\n
@@ -213,7 +215,7 @@ org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.7=Summ
 org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.6=maximale \u00DCberschreitung \: %.4f
 org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.5=Anzahl \u00DCberschreitungen \: \#%d
 org.kalypso.convert.namodel.DefaultPathGenerator.19=Abflusswerte(statistisch)
-org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.3=Datum  
+org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.3=Datum
 org.kalypso.convert.namodel.DefaultPathGenerator.18=Abflussbilanz
 org.kalypso.convert.namodel.DefaultPathGenerator.17=Hydrotope
 org.kalypso.convert.namodel.timeseries.diff.BlockTimeSeriesDiffComperator.1=Anzahl der Werte \: %d \: %d
@@ -236,15 +238,15 @@ org.kalypso.convert.namodel.manager.NetFileManager.8=Netzdatei\: izug>0 wird nic
 org.kalypso.convert.namodel.manager.LzsimManager.87=Anfangswerte f\u00FCr Teilgebiet nicht vollst\u00E4ndig (GebietsID\: %s).
 org.kalypso.convert.namodel.NaModelInnerCalcJob.50=Ergebniszeitreihe enth\u00E4lt weder Abfluss noch Waserstand, Umh\u00FCllendenberechnung nicht m\u00F6glich.
 org.kalypso.convert.namodel.NaModelInnerCalcJob.229=\ may not exist
-org.kalypso.convert.namodel.NaModelInnerCalcJob.228=ERR\: 
+org.kalypso.convert.namodel.NaModelInnerCalcJob.228=ERR\:
 NetFileManager_13=Node \#%s
 NetFileManager_12=Channel \#%s
 org.kalypso.convert.namodel.NaModelInnerCalcJob.224=Failed to copy %s (%s)
 org.kalypso.convert.namodel.manager.CatchmentManager.88=Grundwasserabfluss aus Teilgebiet (Name\: %s, ID\: %s) betr\u00E4gt nur %.2f%%.
 NetFileManager_11=Subcatchment \#%s
 NetFileManager_10=<Unknown> (GML-ID\: %s)
-org.kalypso.convert.namodel.NaModelInnerCalcJob.220=Copying %s 
-org.kalypso.convert.namodel.manager.CatchmentManager.84=Summe Grundwasserabgabe in Nachbargebiete > 1.0 (100%%) in Teilgebiet (Name\: %s) 
+org.kalypso.convert.namodel.NaModelInnerCalcJob.220=Copying %s
+org.kalypso.convert.namodel.manager.CatchmentManager.84=Summe Grundwasserabgabe in Nachbargebiete > 1.0 (100%%) in Teilgebiet (Name\: %s)
 org.kalypso.convert.namodel.NaModelCalcJob.0=Unexcepted error during KalypsoHydrology simulation\: %s
 org.kalypso.convert.namodel.manager.CatchmentManager.81=Failed to write hydrograph for sub-catchment %s.
 org.kalypso.convert.namodel.manager.CatchmentManager.80=Missing or invalid target for groundwater definition in sub-catchment %s.
@@ -257,10 +259,10 @@ ZftWriter_0=Failed to read hydrograph
 org.kalypso.convert.namodel.NaModelInnerCalcJob.44=Genauigkeit f\u00FCr Umh\u00FCllende ist nicht angegeben. F\u00FCr die Vorhersage wird %.4f [%%/60h] als Vorhersagegenauigkeit angenommen.
 NaOptimizeLoader_1=Failed to read optimization configuration
 NaOptimizeLoader_0=Unable to find NaOptimizeConfig for path '%s'
-FeatureListGeometryIntersector.9=Complete area difference during intersection\: %.6f m² 
+FeatureListGeometryIntersector.9=Complete area difference during intersection\: %.6f m²
 FeatureListGeometryIntersector.5=Failed to intersect '%s' with '%s'.
 FeatureListGeometryIntersector.4=Possible problem intersecting %s with %s
-FeatureListGeometryIntersector.3=Problem bei Feature 
+FeatureListGeometryIntersector.3=Problem bei Feature
 FeatureListGeometryIntersector.2=Gesamter Fl\u00E4chenfehler bei der Verschneidung\: %s
 FeatureListGeometryIntersector.1=Problem while intersecting \r\n%s\r\n%s
 FeatureListGeometryIntersector.0=Problem at feature %s
@@ -272,7 +274,7 @@ NAModelPreprocessor.3=Failed to copy preprocessed ascii files
 NAModelPreprocessor.2=Writing control files for Kalypso-NA
 org.kalypso.convert.namodel.NaModelInnerCalcJob.36=Simulation konnte nicht durchgefuehrt werden
 NAModelPreprocessor.1=Adding additional virtual channels
-org.kalypso.convert.namodel.NAModellConverter.4=Outputfolder\: 
+org.kalypso.convert.namodel.NAModellConverter.4=Outputfolder\:
 NAModelPreprocessor.0=Unexpected error while generating Kalypso-NA ASCII files
 org.kalypso.convert.namodel.NAModellConverter.3=Conversion from ASCII to GML was successfull
 org.kalypso.convert.namodel.NaModelInnerCalcJob.32=Simulation konnte nicht erfolgreich durchgef\u00FChrt werden - lade Log-Dateien
